--- a/css/styles.css
+++ b/css/styles.css
@@ -48,10 +48,20 @@ img {
   grid-row: 1 / -1;
 }
 
-.hero-img {
+.hero-image {
   width: 100%;
   height: 100%;
   object-fit: fill;
+}
+
+.hero-image-box::after {
+  content: "";
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  background-color: rgba(76, 205, 209, 0.4);
 }
 
 .hero-text-box {
@@ -60,4 +70,43 @@ img {
   align-self: center;
   z-index: 10;
   text-align: center;
+}
+
+.hero-heading {
+  font-size: 3rem;
+  line-height: 3rem;
+  color: white;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+.hero-text {
+  font-size: 2rem;
+  color: white;
+}
+
+/* Medi Queries Below */
+
+@media (min-width: 600px) {
+  .hero-heading {
+    color: white;
+    font-size: 4rem;
+    line-height: 4rem;
+  }
+  .hero-text {
+    font-size: 2.5rem;
+    line-height: 2.5rem;
+  }
+}
+
+@media (min-width: 920px) {
+  .hero-heading {
+    color: white;
+    font-size: 9rem;
+    line-height: 9rem;
+  }
+  .hero-text {
+    font-size: 4rem;
+    line-height: 4rem;
+  }
 }
