--- a/css/styles.css
+++ b/css/styles.css
@@ -86,6 +86,38 @@ img {
   color: white;
 }
 
+.portfolio-container {
+  margin: 1rem auto 0 auto;
+}
+
+.portfolio-container h1 {
+  font-size: 2rem;
+  line-height: 2rem;
+  color: pink;
+}
+
+.portfolio-gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 0.5rem;
+  grid-auto-rows: 300px;
+}
+
+.gallery-item {
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
+
+.gallery-img {
+  height: 100%;
+  object-fit: cover;
+  transition: 0.5s ease-in-out;
+}
+
+.gallery-img:hover {
+  transform: scale(1.5);
+}
 /* Medi Queries Below */
 
 @media (min-width: 600px) {
@@ -98,6 +130,11 @@ img {
     font-size: 2.5rem;
     line-height: 2.5rem;
   }
+  .portfolio-container h1 {
+    font-size: 3rem;
+    line-height: 3rem;
+    padding-left: 1rem;
+  }
 }
 
 @media (min-width: 920px) {
@@ -109,5 +146,12 @@ img {
   .hero-text {
     font-size: 4rem;
     line-height: 4rem;
+  }
+  .portfoilio-container {
+    max-width: 1400px;
+  }
+  .portfoilio-container h1 {
+    font-size: 6rem;
+    line-height: 6rem;
   }
 }
